<resources>
    <!-- <string name="app_name">TicTacToe</string> -->
    <string name="app_name">Boter, kaas en eieren</string>

    <string name="how_to_play_title">How to play</string>
    <string name="how_to_play_text">Hier komt de How To Play tekst</string>
    <string name="OK">@android:string/ok</string>

    <string name="hello_splash">Hello splash!</string>
    <string name="hello_world">Hallo Wereld!</string>
    <string name="action_settings">Opties</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="play">Spelen</string>
    <string name="exit">Sluiten</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="settings">Opties</string>
    <string name="settingsPlayerBox">Speler naam</string>
    <string name="defaultplayername">Speler 1</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="your_turn">Het is jouw beurt!</string>
    <string name="computers_turn">De computer is aan de beurt.</string>
    <string name="welcomeText">Welkom</string>
    <string name="splash_screen">Een project groep 6 app</string>

</resources>
