<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.kb50group6.tictactoe.MainActivityFragment"
    android:id="@+id/layout_fragment_main"
    android:background="@drawable/chalkboardbackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="65dp"
        android:textColor="@color/white"
        android:text="@string/play"
        android:id="@+id/textViewPlay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:onClick="onClickButtonPlay"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="65dp"
        android:textColor="@color/white"
        android:text="@string/settings"
        android:id="@+id/textViewSettings"
        android:layout_below="@+id/textViewPlay"
        android:layout_centerHorizontal="true"
        android:onClick="onClickButtonSettings" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="65dp"
        android:textColor="@color/white"
        android:text="@string/exit"
        android:id="@+id/textViewExit"
        android:layout_below="@+id/textViewSettings"
        android:layout_centerHorizontal="true"
        android:onClick="onClickButtonExit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeText"
        android:textSize="32dp"
        android:textColor="@color/white"
        android:id="@+id/textView16"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textSize="32dp"
        android:textColor="@color/white"
        android:id="@+id/playernameTextview"
        android:layout_alignTop="@+id/textView16"
        android:layout_toEndOf="@+id/textView16" />

</RelativeLayout>
