<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.kb50group6.tictactoe.MainActivityFragment">

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/buttonPlay"
        android:onClick="onClickButtonPlay"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/buttonHowToPlay" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play_title"
        android:id="@+id/buttonHowToPlay"
        android:onClick="onClickButtonHowToPlay"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/buttonExit" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/buttonExit"
        android:onClick="onClickButtonExit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LANDSCAPE"
        android:id="@+id/textView"
        android:layout_above="@+id/buttonHowToPlay"
        android:layout_alignParentStart="true" />

</RelativeLayout>
